# haskell-quickselect-median-of-medians

./: Main.hs  median-of-medians.cabal  median-of-medians.hs  stack.yaml
